# Git-Lost-BE

./: .env  .env.example  .gitignore  Dockerfile  MIGRATION_SUMMARY.md  PROJECT_CONTEXT.md  README.md  docker-compose.yml  pyproject.toml  trip_consensus_graph.mmd  visualize_graph.py
.github/workflows/: bootstrap-ec2-iam.yml  deploy.yml
app/: __init__.py  main.py
app/clients/: __init__.py  cab_client.py  flight_client.py  google_places_client.py  hotel_client.py  openai_client.py
app/core/: __init__.py  config.py  database.py  logger.py
app/domain/: booking_domain.py  chat_domain.py  itinerary_domain.py  travel_planning_domain.py  trip_domain.py  user_domain.py
app/langgraph/: __init__.py
app/models/: __init__.py  chat.py  trip.py  trip_chat.py  trip_consensus.py  trip_user.py  user.py
app/routes/: __init__.py  booking.py  booking_routes.py  chat_routes.py  clean_chat_routes.py  consensus_chat_routes.py  flight_routes.py  hotel_routes.py  itinerary_routes.py  travel_planning_routes.py  trip_routes.py  user_routes.py
app/schemas/: chat_schema.py  consensus_chat_schema.py  consensus_schema.py  hotel_schema.py  trip_chat_schema.py  trip_schema.py  trip_user_schema.py  user_schema.py
app/services/: __init__.py  ai_service.py  booking_service.py  chat_plan_service.py  chat_service.py  consensus_chat_service.py  itinerary_service.py  travel_planning_service.py  trip_service.py  user_service.py
postman/: Local.postman_environment.json  TripPlanner.postman_collection.json
scripts/: demo_flow.py
tests/: test_health.py  test_models.py
(+18 files in other folders)
