[tool.poetry]
name = "booking-service-be"
version = "0.1.0"
description = "Backend for booking flights, cabs, and hotels using OpenAI/LangGraph (scaffold)"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.6" }
langgraph = "^0.2.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.6.9"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
